# darlonv.github.io

./: Makefile  README.md  index.html  update_prog_ciencia_dados.sh
work/: Makefile  index.html  pyproject.toml
work/page/: _config.yml  _toc.yml  apoio.md  disciplinas.md  ensino.md  extensao.md  horarios.md  inovacao.md  intro.md  leituras.md  pesquisa.md  publicacoes.md  tccs.md
work/page/.ipynb_checkpoints/: disciplinas-checkpoint.md  intro-checkpoint.md  publicacoes-checkpoint.md  tccs-checkpoint.md
work/page/_build/.doctrees/: apoio.doctree  disciplinas.doctree  ensino.doctree  environment.pickle  extensao.doctree  horarios.doctree  inovacao.doctree  interesses.doctree  intro.doctree  inuteis.doctree  leituras.doctree  pesquisa.doctree  publicacoes.doctree  tccs.doctree
work/page/_build/.doctrees/content/: cronograma.doctree  gantt.doctree
work/page/_build/.doctrees/links/: databases.doctree
work/page/_build/html/: .buildinfo  apoio.html  disciplinas.html  ensino.html  extensao.html  genindex.html  horarios.html  inovacao.html  interesses.html  intro.html  inuteis.html  leituras.html  objects.inv  pesquisa.html  publicacoes.html  search.html  searchindex.js  tccs.html
work/page/_build/html/_sources/: disciplinas.md  extensao.md  inovacao.md  interesses.md  inuteis.md  pesquisa.md  publicacoes.md  tccs.md
work/page/_build/html/content/: cronograma.html  gantt.html
work/page/_build/html/links/: databases.html
work/page/content/: projetos.csv
work/page/content/.ipynb_checkpoints/: gantt-checkpoint.ipynb
work/page/links/: databases.md
(+404 files in other folders)
