[tool.poetry]
name = "workz"
version = "0.1.0"
description = ""
authors = ["Darlon <darlonv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
jupyter-book = "^1.0.4.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
